--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.9.25",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "sharp": "^0.25.4",
+    "socket.io": "^2.3.0"
   },
   "scripts": {
     "dev": "nodemon src/index.js"
